--- a/ADT Algorithms.vcxproj.filters
+++ b/ADT Algorithms.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClInclude Include="array_string_algorithm.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="hashtable_seperate_chaining.h">
+    <ClInclude Include="hashtableSC_OA.h">
       <Filter>源文件</Filter>
     </ClInclude>
   </ItemGroup>
