--- a/ADT Algorithms.vcxproj.filters
+++ b/ADT Algorithms.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="hashtableSC_OA.h">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="RBTree.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
