--- a/ADT Algorithms.vcxproj
+++ b/ADT Algorithms.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="algorithm_questions\array_string_algorithm.h" />
     <ClInclude Include="algorithm_questions\linkedlist_algorithm.h" />
     <ClInclude Include="ADT_imps\rbtree.h" />
+    <ClInclude Include="algorithm_technics\dynamic_programming.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ADT_imps\hashtable_seperate_chaining.h" />
