coin change problem

--- a/ADT Algorithms.vcxproj
+++ b/ADT Algorithms.vcxproj
@@ -149,7 +149,7 @@
     <ClInclude Include="algorithm_questions\array_string_algorithm.h" />
     <ClInclude Include="algorithm_questions\linkedlist_algorithm.h" />
     <ClInclude Include="ADT_imps\rbtree.h" />
-    <ClInclude Include="algorithm_technics\dynamic_programming.h" />
+    <ClInclude Include="algorithm_questions\dynamic_programming.h" />
     <ClInclude Include="sorting_algorithms.h" />
   </ItemGroup>
   <ItemGroup>
