--- a/ADT Algorithms.vcxproj.filters
+++ b/ADT Algorithms.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClInclude Include="ADT_imps\binary_heap.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="algorithm_technics\dynamic_programming.h">
+    <ClInclude Include="algorithm_questions\dynamic_programming.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="sorting_algorithms.h">
